cmake_minimum_required(VERSION 3.31)
project(DSA C)

set(CMAKE_C_STANDARD 23)

add_executable(DSA SS1/PTIT_CNTT3_IT104_Session01_Bai01.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai02.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai03.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai04.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai05.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai06.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai07.c
        SS1/PTIT_CNTT3_IT104_Session01_Bai08.c
)
